<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotmem_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 node for robotmem — robot experience memory system</description>
  <maintainer email="gadesawnordeatine@gmail.com">gladego</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>robotmem_msgs</depend>
  <!-- robotmem is a pip dependency: pip install robotmem -->
  <!-- Not listed as exec_depend because bloom Debian generator rejects pip-only keys -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
